<?xml version="1.0"?>
<package>
  <name>rplidar_ros</name>
  <version>1.5.3</version>
  <description>The rplidar ros package 
          support rplidar and rplidar A2        
  </description>

  <maintainer email="kint.zhao@slamtec.com">kint.zhao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
